# time-tracker

./: Cargo.toml
.github/: dependabot.yml
migrations/2020-04-21-003231_create_sessions/: up.sql
src/: connection.rs  handler.rs  main.rs  models.rs  router.rs  schema.rs
src/resources/sessions/: models.rs  repository.rs
