[package]
name = "time-tracker"
version = "0.1.0"
authors = ["joshualing <joshling1919@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]
